attempt 2 at deploying

--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "todos",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://jayaimzzz.github.io/todos-part1-app/",
   "dependencies": {
-    "homepage": "http://jayaimzzz.github.io/todos-part1-app",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
